bootstrap carousel and content display as row

--- a/obh-frontend/src/App.css
+++ b/obh-frontend/src/App.css
@@ -35,4 +35,18 @@
   to {
     transform: rotate(360deg);
   }
+
+}
+
+body {
+	background: #141414;
+	color: #ffffff;
+}
+.carousel-item, .carousel-item img {
+    height: 400px;
+  width:100%;
+}
+.contentPage > .row {
+	overflow-x: auto;
+	flex-wrap: nowrap;
 }
