--- a/obh-frontend/src/App.css
+++ b/obh-frontend/src/App.css
@@ -37,15 +37,54 @@
   }
 
 }
+.nav-button{
+  background-color: #ccccff
+}
+.carousel-main{
+  width: 100%;
+  height: 340px;
+  background-color: #8533ff;
+  align-content: center;
+}
+.carousel-container{
+  background-color: #c299ff;
+  height:300px;
+  padding-top: 10px;
+  margin-top: 20px;
+  padding-bottom: 10px;
+  width: 100%
 
+}
+.carousel-button{
+  margin-bottom:-50px;
+  color: pink;
+}
+.carousel-img {
+ height:250px;
+ margin-left: 38%;
+ width: 25%
 
-.carousel-item, .carousel-item img {
-  height: 300px;
-  width:100%;
+}
+.user-name{
+  position: absolute;
+  right: 10px;
+}
+.OBH-Content{
+  background-color: #8080ff;
+}
+.movies-shows{
+  background-color: #9999ff;
+  border-radius: 10px;
+  width: 100%;
+  margin-top: 5px;
+  padding: 10px
 }
 .contentPage > .row {
 	overflow-x: auto;
 	flex-wrap: nowrap;
+}
+.plot{
+  text-align: left;
 }
 
 .favoritesPage > .row {
@@ -53,9 +92,17 @@
 	flex-wrap: nowrap;
 }
 
-
+.content-card{
+  padding-top: 10px;
+}
 .content-card:hover {
-  background-color: pink
+  background-color: #c299ff;
+
+}
+.user-container{
+  padding-top: 10px;
+  height: 650px;
+  background-color: #6db8ed
 }
 .img-button {
    /*
@@ -74,5 +121,13 @@
  }
 .show-page{
   height: 600px;
-  background-color: "#6db8ed";
+  background-color: #6db8ed;
+}
+
+.user-button{
+  margin-bottom: 10px;
+}
+
+.show-page-card{
+background-color: ;
 }
