--- a/obh-frontend/src/App.css
+++ b/obh-frontend/src/App.css
@@ -75,7 +75,7 @@
   padding-top: 10px;
 }
 .logout{
-  background-color: #8080ff;
+  background-color: #b7b7ea;
   padding-top: 10px;
   height:570px;
   padding-left: 20px;
